# XSCGeneDetectPlugin

./: CMakeLists.txt  README.md  conanfile.py
res/: XSCGeneDetect_chart.qrc
src/: CrossSpeciesComparisonGeneDetectPlugin.cpp  CrossSpeciesComparisonGeneDetectPlugin.h  SettingsAction.Analysis.inl  SettingsAction.Serialization.inl  SettingsAction.Tree.inl  SettingsAction.Ui.inl  SettingsAction.cpp  SettingsAction.h  XSCGeneDetectPlugin.cpp  XSCGeneDetectPlugin.h  XSCGeneDetectPlugin.json
